:technologist: logger, air and swagger
