# internal/api/hello.go
@@ -17,7 +17,7 @@ type HelloResponse struct {
 // @Accept json
 // @Produce json
 // @Success 200 {object} HelloResponse
-// @Router /hello [get]
+// @Router /api/v1/hello [get]
 func HelloHandler(w http.ResponseWriter, r *http.Request) {
 	if r.Method != http.MethodGet {
 		http.Error(w, "Method not allowed", http.StatusMethodNotAllowed)
